# AWS-Medical

./: .coverage  .gitignore  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_REFERENCE.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt  soap_main.py  soap_output.json  test_parse.py  tmp_parser_snippet.py  verify_implementation.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
data/outputs/: medical_analysis_results_1759299516.json  medical_analysis_results_cb12c4ce-a45b-4e8e-9a26-173fac708c50_1767402558.json  soap_output_cb12c4ce-a45b-4e8e-9a26-173fac708c50_1767402570.json
data/recordings/: recording1.m4a
scripts/: run_local_pipeline.py  run_pipeline.py
src/app/: main.py
src/clinical_notes/: decision_support.py  patient_artefacts.py
src/clinical_notes/soap/: generator.py  langchain_adapter.py  run.py
src/common/: aws.py  config.py  io.py  models.py
src/transcription/: batch.py  live.py
tests/: __init__.py  test_aws.py  test_decision_support.py  test_generator.py  test_io.py  test_patient_artefacts.py  test_titan_hello_world.py
transcribe/: main.py  soap_generator.py
webapp/: app.py  pipeline_runner.py  visualizer.py
